# CSCE585ProjectROI

./: .gitignore  Classification_Model.ipynb  Current_Model_Training.ipynb  Intro_Parsers.ipynb  MedHive_NER_RE_Tutorial.ipynb  Michelle_Implementation.py  ModelPredictions.csv  Model_Training.ipynb  Model_Training_Apple_Data.ipynb  Model_Training_Google_Data.ipynb  NER_RE_Tutorial.ipynb  Pytorch_Demo.ipynb  README.md  app.py  constants.py  currentDependencies.md  dashboard.py  initialExperimentsFinalCopyP1_NEWMODEL.ipynb  initialExperimentsFinalCopyP2Version_NEWMODEL.ipynb  main.py  michelleDashboard.json  michelleDashboard.py  noteRegardingP1_READREAD_ME.md  preferences.json  pyproject.toml  pyvenv.cfg  refrences.bib  requirements.txt  results.py  run.py  test.txt  users.json
Learning/: Intro_Parsers.ipynb  Preceptron.py  Pytorch_Demo.ipynb  README  Sample_Data_Cleaning.py
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  jsondiff  jsonpatch  jsonpointer
UIDesignDescs/: .set1.md.swp  set1.md
UXResearch/: purpose.md
data/: metrics.csv  sp500Prices.csv  sp500Tickers.csv
docs/: Proposal Slides  docs.txt  references.bib
docs/p1/: P1 Submission (1).pptx  p1.txt
experiments/: experiments.md
milestones/: .powerpointTemplate.tex.swp  guide.md  powerpointTemplate.tex
projectCode/: requirements.md
projectProposalInfo/: StockIdeaProjectProposal.md  templateForStockIdeaFromTATemplate.md
pulledData/: sp500index.csv  tickers.csv
src/: Classification_Model.ipynb  Experiment_1.ipynb  collection.py  features.py  makeDataset.py  training.py
(+70 files in other folders)
