[project]
name = "projectrepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.11.0",
    "asgiref==3.10.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorlog==6.10.1",
    "exceptiongroup==1.3.0",
    "fastjsonschema==2.21.2",
    "flask==2.1.3",
    "flask-cors==6.0.1",
    "flask-sock==0.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "lxml==6.0.2",
    "markupsafe==2.0.1",
    "mypy-extensions==1.1.0",
    "reactpy==1.1.0",
    "requests==2.32.5",
    "simple-websocket==1.1.0",
    "sniffio==1.3.1",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==2.1.2",
    "wsproto==1.2.0",
]
